fixed alignment on images

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body > div > div.container-fluid.section-header {
     }
  
  #description {
-        font-family: Roboto;
+        font-family: 'Bad Script', cursive;
         font-size: 15px;
         font-weight: 300;
       }
@@ -85,7 +85,7 @@ body > div > div.container-fluid.section-header {
       }
 
       .pac-controls label {
-        font-family: Roboto;
+        font-family: 'Bad Script', cursive;
         font-size: 13px;
         font-weight: 300;
       }
@@ -161,7 +161,7 @@ body > div > div.row > div > section {
     }
 
 .feature, img {
-    padding:20px;
+    padding:0px;
     margin:auto;
     margin-bottom:80px;
     height:250px;
@@ -174,7 +174,9 @@ body > div > div.row > div > section {
 border-radius: 50%;
 }
 
-
+.h3 {
+    padding:0px;
+}
 /*----contact form ----*/
 
 .contact {
